[gd_scene load_steps=2 format=2]

[ext_resource path="res://Common/StatusEffects/StatusEffectHandler.gd" type="Script" id=1]

[node name="Stun" type="Node"]
script = ExtResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_SlowTimer_timeout"]
